Actions
Bug #12314
closedld fatal warnings miss some guidance messages
Start date:
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
Gerrit CR:
Description
we need to check later on for any warnings that we should treat as fatal
Updated by Electric Monk over 2 years ago
- Status changed from New to Closed
- % Done changed from 0 to 100
git commit e912cc3d5decbbfbb3005d9f678e9fc3ccbcf91f
commit e912cc3d5decbbfbb3005d9f678e9fc3ccbcf91f Author: John Levon <john.levon@joyent.com> Date: 2020-02-18T17:45:42.000Z 12314 ld fatal warnings miss some guidance messages Reviewed by: Toomas Soome <tsoome@me.com> Approved by: Dan McDonald <danmcd@joyent.com>
Actions